RESOLVED FIXED190417
REGRESSION(r231663) loading in hidden WKWebViews stalls because WebProcess is suspended
https://bugs.webkit.org/show_bug.cgi?id=190417
Summary REGRESSION(r231663) loading in hidden WKWebViews stalls because WebProcess is...
Alex Christensen
Reported 2018-10-09 16:35:10 PDT
REGRESSION(r231663) loading in hidden WKWebViews stalls because WebProcess is suspended
Attachments
Patch (2.40 KB, patch)
2018-10-09 16:36 PDT, Alex Christensen
cdumez: review+
Alex Christensen
Comment 1 2018-10-09 16:36:18 PDT
Alex Christensen
Comment 2 2018-10-09 16:36:20 PDT
Chris Dumez
Comment 3 2018-10-09 16:37:02 PDT
Comment on attachment 351925 [details] Patch r=me
Alex Christensen
Comment 4 2018-10-09 16:40:35 PDT
Note You need to log in before you can comment on or make changes to this bug.