REGRESSION(r231663) loading in hidden WKWebViews stalls because WebProcess is suspended https://bugs.webkit.org/show_bug.cgi?id=190417 <rdar://problem/43391014>

Reviewed by Chris Dumez.

* UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::didChangeIsLoading):
Revert r321663, but keep the change to TestWKWebView.mm because that made the tests more reliable.



Canonical link: https://commits.webkit.org/205370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236989 268f45cc-cd09-0410-ab3c-d52691b4dbfc